--- a/ScavengerHunter/Info.plist
+++ b/ScavengerHunter/Info.plist
@@ -34,5 +34,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please Enable Location - App Will Not Work Without It</string>
 </dict>
 </plist>
