--- a/ScavengerHunter/Info.plist
+++ b/ScavengerHunter/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Please Enable Location - App Will Not Work Without It</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please Enable Location - App Will Not Work Without It</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
